--- a/test.html
+++ b/test.html
@@ -8,17 +8,32 @@
 
 <link rel="canonical" href="https://homerepairs4u.com/local/gutter-services-kirk-sandall.html">
 
-<meta name="description" content="Professional gutter clearing, cleaning, repairs and replacement in Kirk Sandall, Doncaster. Reliable local service to protect your home from water damage. Call 07735 873694.">
+<meta name="description" content="Professional gutter clearing, cleaning, repairs and replacement in Kirk Sandall, Doncaster. Local, reliable service to protect your home from water damage. Call 07735 873694.">
 
 <link rel="icon" href="/favicon.png" type="image/png">
 <link rel="preload" as="image" href="/images/logo.webp">
 
 <style>
-/* (Header & footer styles unchanged as requested) */
-.service-image{width:100%;max-width:900px;display:block;margin:20px auto;border-radius:6px;cursor:pointer;}
+html{-webkit-text-size-adjust:100%;}
+body{margin:0;font-family:Arial,sans-serif;background:#f8f8f8;color:#222;line-height:1.65;}
+header{background:#fff;padding:26px 12px;text-align:center;border-bottom:4px solid #27ae60;}
+.logo{max-height:90px;width:auto;}
+.call-btn{display:inline-block;margin-top:18px;padding:15px 30px;background:#000;color:#fff;font-size:19px;font-weight:bold;text-decoration:none;border-radius:6px;min-height:48px;}
+.call-btn:hover{background:#333;}
+main{max-width:950px;margin:0 auto;background:#fff;padding:28px 18px;}
+h1,h2,h3{color:#111;}
+label{font-weight:bold;display:block;margin-bottom:6px;}
+input[type="number"]{width:100%;padding:12px;font-size:16px;margin-bottom:18px;}
+.form-row{display:flex;align-items:center;gap:14px;padding:12px 10px;margin-bottom:12px;}
+.form-row input{width:22px;height:22px;}
+button{cursor:pointer;min-height:48px;}
+button:focus,a:focus,input:focus{outline:3px solid #27ae60;outline-offset:2px;}
+.service-image{width:100%;max-width:900px;display:block;margin:20px auto;border-radius:6px;}
 .lightbox{display:none;position:fixed;z-index:9999;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.85);align-items:center;justify-content:center;}
-.lightbox img{max-width:95%;max-height:95%;border-radius:6px;}
+.lightbox img{max-width:95%;max-height:95%;border-radius:6px;box-shadow:0 0 25px #000;}
 .lightbox:target{display:flex;}
+footer{background:#000;color:#fff;text-align:center;padding:26px 15px;margin-top:40px;font-size:14px;}
+footer a{color:#fff;text-decoration:none;padding:8px 12px;display:inline-block;}
 </style>
 
 <!-- Local Business Schema -->
@@ -29,17 +44,18 @@
 "name":"Home Repairs 4U",
 "url":"https://homerepairs4u.com/",
 "logo":"https://homerepairs4u.com/images/logo.webp",
+"image":"https://homerepairs4u.com/images/logo.webp",
 "telephone":"+447735873694",
+"openingHours":"Mo-Su 07:00-20:00",
 "areaServed":{
 "@type":"Place",
 "name":"Kirk Sandall, Doncaster"
 },
-"openingHours":"Mo-Su 07:00-20:00",
-"priceRange":"££"
+"priceRange":"£50–£3000"
 }
 </script>
 
-<!-- Breadcrumb Schema (VALID) -->
+<!-- Breadcrumbs Schema (FIXED) -->
 <script type="application/ld+json">
 {
 "@context":"https://schema.org",
@@ -75,17 +91,26 @@
 {
 "@type":"Question",
 "name":"How often should gutters be cleared in Kirk Sandall?",
-"acceptedAnswer":{"@type":"Answer","text":"Most properties benefit from gutter clearing once or twice a year, especially after autumn and winter when debris buildup is common."}
+"acceptedAnswer":{
+"@type":"Answer",
+"text":"Most properties benefit from gutter clearing once or twice a year, especially in areas with nearby trees or heavy rainfall."
+}
 },
 {
 "@type":"Question",
-"name":"Do you offer gutter repairs as well as cleaning?",
-"acceptedAnswer":{"@type":"Answer","text":"Yes. We carry out minor gutter repairs, joint sealing and full replacements where required."}
+"name":"Do you offer gutter services near me in Kirk Sandall?",
+"acceptedAnswer":{
+"@type":"Answer",
+"text":"Yes. Home Repairs 4U provides local gutter clearing, cleaning, repairs and replacement throughout Kirk Sandall and surrounding Doncaster areas."
+}
 },
 {
 "@type":"Question",
-"name":"Can you provide gutter services near me quickly?",
-"acceptedAnswer":{"@type":"Answer","text":"Yes. We offer responsive local gutter services throughout Kirk Sandall and surrounding Doncaster areas."}
+"name":"Can blocked gutters cause damp problems?",
+"acceptedAnswer":{
+"@type":"Answer",
+"text":"Yes. Overflowing gutters can allow water to soak brickwork and foundations, leading to damp, mould and long-term damage."
+}
 }
 ]
 }
@@ -107,12 +132,19 @@
 <h1>Gutter Services in Kirk Sandall, Doncaster</h1>
 
 <p>
-Home Repairs 4U provides professional gutter services in Kirk Sandall, helping homeowners protect their properties from water damage, damp issues and long-term structural wear. Our local experience means we understand the challenges properties face in this area, from seasonal debris to ageing gutter systems.
+Home Repairs 4U provides professional gutter services in Kirk Sandall, helping homeowners protect their properties from water damage, damp issues and unnecessary repair costs. Our local service is designed to keep rainwater flowing safely away from your home all year round.
+</p>
+
+<p>
+Blocked, leaking or damaged gutters are one of the most common causes of external property problems. When gutters fail, water can overflow onto walls, foundations and rooflines. Over time, this can lead to staining, moss growth, damp penetration and even structural concerns.
+</p>
+
+<p>
+We work across Kirk Sandall and surrounding areas of Doncaster, delivering reliable gutter clearing, cleaning, repairs and full replacement for houses, bungalows and small commercial buildings.
 </p>
 
 <h2>Instant Gutter Quote Calculator</h2>
 
-<!-- Calculator UNCHANGED as requested -->
 <form id="quoteForm">
 <label for="metres">Total gutter length (metres)</label>
 <input type="number" id="metres" min="1" step="0.1" required>
@@ -157,38 +189,51 @@ items.length
 
 <h3>Gutter Clearing</h3>
 <p>
-Blocked gutters are one of the most common causes of damp and overflowing water. We remove leaves, moss and debris safely, restoring proper flow and reducing the risk of costly repairs.
+Gutter clearing removes leaves, moss and debris that build up over time. Regular clearing helps prevent overflows and protects walls, fascias and foundations from water damage.
 </p>
 
-<a href="#img1">
+<a href="#clearing-lightbox">
 <img src="/images/clearing-service.webp" alt="Gutter clearing service in Kirk Sandall Doncaster" class="service-image">
 </a>
-<div id="img1" class="lightbox"><a href="#"><img src="/images/clearing-service.webp" alt=""></a></div>
+<div id="clearing-lightbox" class="lightbox"><a href="#"><img src="/images/clearing-service.webp" alt=""></a></div>
 
 <h3>Gutter Cleaning</h3>
 <p>
-External gutter cleaning improves appearance while helping materials dry properly. This reduces staining and extends the lifespan of your guttering system.
+External gutter cleaning improves the appearance of your property by removing algae and staining. Clean gutters also dry more efficiently, helping extend their lifespan.
 </p>
 
-<a href="#img2">
-<img src="/images/cleaned-gutters.webp" alt="Cleaned gutters on a property in Kirk Sandall Doncaster" class="service-image">
+<a href="#cleaning-lightbox">
+<img src="/images/cleaned-gutters.webp" alt="Gutter cleaning in Kirk Sandall Doncaster" class="service-image">
 </a>
-<div id="img2" class="lightbox"><a href="#"><img src="/images/cleaned-gutters.webp" alt=""></a></div>
+<div id="cleaning-lightbox" class="lightbox"><a href="#"><img src="/images/cleaned-gutters.webp" alt=""></a></div>
 
 <h3>Gutter Repairs & Replacement</h3>
 <p>
-From leaking joints to full replacements, we assess the condition of your gutters and recommend the most practical solution for long-term reliability.
+We repair leaking joints, loose sections and damaged guttering where possible. If replacement is required, we install durable systems designed for long-term reliability.
 </p>
 
-<a href="#img3">
-<img src="/images/replaced-gutter.webp" alt="New gutter installation in Kirk Sandall Doncaster" class="service-image">
+<a href="#replacement-lightbox">
+<img src="/images/replaced-gutter.webp" alt="Gutter replacement work in Kirk Sandall Doncaster" class="service-image">
 </a>
-<div id="img3" class="lightbox"><a href="#"><img src="/images/replaced-gutter.webp" alt=""></a></div>
+<div id="replacement-lightbox" class="lightbox"><a href="#"><img src="/images/replaced-gutter.webp" alt=""></a></div>
 
-<h2>Looking for Gutter Services Near Me?</h2>
+<h2>Why Choose Home Repairs 4U</h2>
 
 <p>
-If you’re searching for dependable gutter services near you in Kirk Sandall, Home Repairs 4U offers a straightforward, local solution. We also serve nearby areas including <a href="/local/gutter-services-bentley.html">Bentley</a>, <a href="/local/gutter-services-askern.html">Askern</a> and <a href="/local/gutter-services-darrington.html">Darrington</a>.
+As a local Doncaster-based business, we understand the needs of properties in Kirk Sandall. We provide honest advice, clear pricing and dependable workmanship on every job.
+</p>
+
+<p>
+We also offer related services including
+<a href="/services/pressure-washing.html">pressure washing</a>,
+<a href="/services/upvc-restoration.html">uPVC restoration</a> and
+<a href="/services/fence-installation.html">fencing</a>, making us a convenient choice for external property maintenance.
+</p>
+
+<h2>Book Gutter Services Near You</h2>
+
+<p>
+If you’re searching for reliable gutter services near you in Kirk Sandall, Home Repairs 4U is ready to help. From routine maintenance to full gutter replacement, we provide solutions that protect your home and prevent costly damage.
 </p>
 
 <div style="text-align:center;margin:36px 0;">
@@ -202,7 +247,7 @@ If you’re searching for dependable gutter services near you in Kirk Sandall, H
 <br>
 <a href="/services/guttering.html">Guttering</a>
 <a href="/services/pressure-washing.html">Pressure Washing</a>
-<a href="/services/fence-installation.html">Fencing</a>
+<a href="/services/upvc-restoration.html">uPVC Restoration</a>
 <br>
 <a href="https://www.facebook.com/people/Handyman-services/61584395621256/">Facebook</a>
 </footer>
