--- a/test.html
+++ b/test.html
@@ -4,11 +4,11 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<title>Gutter Services in Kirk Sandall, Doncaster | Home Repairs 4U</title>
+<title>Gutter Clearing & Gutter Services in Kirk Sandall, Doncaster | Home Repairs 4U</title>
 
 <link rel="canonical" href="https://homerepairs4u.com/local/gutter-services-kirk-sandall.html">
 
-<meta name="description" content="Professional gutter clearing, cleaning, repairs and replacement in Kirk Sandall, Doncaster. Local, reliable service to protect your home from water damage. Call 07735 873694.">
+<meta name="description" content="Reliable gutter clearing, cleaning, repairs and replacement in Kirk Sandall, Doncaster. Local gutter services near you. Call 07735 873694.">
 
 <link rel="icon" href="/favicon.png" type="image/png">
 <link rel="preload" as="image" href="/images/logo.webp">
@@ -22,218 +22,153 @@ header{background:#fff;padding:26px 12px;text-align:center;border-bottom:4px sol
 .call-btn:hover{background:#333;}
 main{max-width:950px;margin:0 auto;background:#fff;padding:28px 18px;}
 h1,h2,h3{color:#111;}
-label{font-weight:bold;display:block;margin-bottom:6px;}
-input[type="number"]{width:100%;padding:12px;font-size:16px;margin-bottom:18px;}
-.form-row{display:flex;align-items:center;gap:14px;padding:12px 10px;margin-bottom:12px;}
-.form-row input{width:22px;height:22px;}
-button{cursor:pointer;min-height:48px;}
-button:focus,a:focus,input:focus{outline:3px solid #27ae60;outline-offset:2px;}
-.service-image{width:100%;max-width:900px;display:block;margin:20px auto;border-radius:6px;}
+.service-image{width:100%;max-width:900px;display:block;margin:22px auto;border-radius:6px;cursor:pointer;}
 .lightbox{display:none;position:fixed;z-index:9999;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.85);align-items:center;justify-content:center;}
-.lightbox img{max-width:95%;max-height:95%;border-radius:6px;box-shadow:0 0 25px #000;}
+.lightbox img{max-width:95%;max-height:95%;border-radius:6px;}
 .lightbox:target{display:flex;}
 footer{background:#000;color:#fff;text-align:center;padding:26px 15px;margin-top:40px;font-size:14px;}
 footer a{color:#fff;text-decoration:none;padding:8px 12px;display:inline-block;}
 </style>
 
-<!-- Local Business Schema -->
+<!-- ORGANISATION SCHEMA (VALID – NO POSTALADDRESS) -->
 <script type="application/ld+json">
 {
-"@context":"https://schema.org",
-"@type":"HomeAndConstructionBusiness",
-"name":"Home Repairs 4U",
-"url":"https://homerepairs4u.com/",
-"logo":"https://homerepairs4u.com/images/logo.webp",
-"image":"https://homerepairs4u.com/images/logo.webp",
-"telephone":"+447735873694",
-"openingHours":"Mo-Su 07:00-20:00",
-"areaServed":{
-"@type":"Place",
-"name":"Kirk Sandall, Doncaster"
+"@context": "https://schema.org",
+"@type": "HomeAndConstructionBusiness",
+"name": "Home Repairs 4U",
+"url": "https://homerepairs4u.com/",
+"logo": "https://homerepairs4u.com/images/logo.webp",
+"telephone": "+447735873694",
+"areaServed": {
+"@type": "Place",
+"name": "Kirk Sandall, Doncaster"
 },
-"priceRange":"£50–£3000"
+"openingHours": "Mo-Su 07:00-20:00",
+"priceRange": "£50–£3000"
 }
 </script>
 
-<!-- Breadcrumbs Schema (FIXED) -->
+<!-- BREADCRUMB SCHEMA (FIXED – VALID) -->
 <script type="application/ld+json">
 {
-"@context":"https://schema.org",
-"@type":"BreadcrumbList",
-"itemListElement":[
-{
-"@type":"ListItem",
-"position":1,
-"name":"Home",
-"item":"https://homerepairs4u.com/"
-},
-{
-"@type":"ListItem",
-"position":2,
-"name":"Guttering Services",
-"item":"https://homerepairs4u.com/services/guttering.html"
-},
-{
-"@type":"ListItem",
-"position":3,
-"name":"Kirk Sandall"
-}
-]
+"@context": "https://schema.org",
+"@type": "BreadcrumbList",
+"itemListElement": [{
+"@type": "ListItem",
+"position": 1,
+"name": "Home",
+"item": "https://homerepairs4u.com/"
+},{
+"@type": "ListItem",
+"position": 2,
+"name": "Guttering Services",
+"item": "https://homerepairs4u.com/services/guttering.html"
+},{
+"@type": "ListItem",
+"position": 3,
+"name": "Kirk Sandall"
+}]
 }
 </script>
 
-<!-- FAQ Schema -->
+<!-- FAQ SCHEMA -->
 <script type="application/ld+json">
 {
-"@context":"https://schema.org",
-"@type":"FAQPage",
-"mainEntity":[
-{
-"@type":"Question",
-"name":"How often should gutters be cleared in Kirk Sandall?",
-"acceptedAnswer":{
-"@type":"Answer",
-"text":"Most properties benefit from gutter clearing once or twice a year, especially in areas with nearby trees or heavy rainfall."
+"@context": "https://schema.org",
+"@type": "FAQPage",
+"mainEntity": [{
+"@type": "Question",
+"name": "How often should gutters be cleared in Kirk Sandall?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Most properties in Kirk Sandall benefit from gutter clearing once or twice a year, especially if trees are nearby."
 }
-},
-{
-"@type":"Question",
-"name":"Do you offer gutter services near me in Kirk Sandall?",
-"acceptedAnswer":{
-"@type":"Answer",
-"text":"Yes. Home Repairs 4U provides local gutter clearing, cleaning, repairs and replacement throughout Kirk Sandall and surrounding Doncaster areas."
+},{
+"@type": "Question",
+"name": "Do you provide local gutter services near me?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Yes, Home Repairs 4U provides local gutter services throughout Kirk Sandall and surrounding areas of Doncaster."
 }
-},
-{
-"@type":"Question",
-"name":"Can blocked gutters cause damp problems?",
-"acceptedAnswer":{
-"@type":"Answer",
-"text":"Yes. Overflowing gutters can allow water to soak brickwork and foundations, leading to damp, mould and long-term damage."
+},{
+"@type": "Question",
+"name": "Can damaged gutters be repaired instead of replaced?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Minor leaks and loose sections can often be repaired. We assess the condition first and only recommend replacement when necessary."
 }
-}
-]
+}]
 }
 </script>
 
 </head>
-
 <body>
 
 <header>
-<img src="/images/logo.webp" alt="Home Repairs 4U logo" class="logo" width="600" height="200">
-<br>
+<img src="/images/logo.webp" alt="Home Repairs 4U logo" class="logo" width="600" height="200"><br>
 <a href="/" style="font-size:20px;font-weight:600;color:#000;">Home</a><br>
 <a href="tel:07735873694" class="call-btn">Call 07735 873694</a>
 </header>
 
 <main>
 
-<h1>Gutter Services in Kirk Sandall, Doncaster</h1>
+<h1>Gutter Clearing & Gutter Services in Kirk Sandall, Doncaster</h1>
 
 <p>
-Home Repairs 4U provides professional gutter services in Kirk Sandall, helping homeowners protect their properties from water damage, damp issues and unnecessary repair costs. Our local service is designed to keep rainwater flowing safely away from your home all year round.
+If you are looking for reliable <strong>gutter services near you in Kirk Sandall</strong>, Home Repairs 4U provides professional gutter clearing, cleaning, repairs and replacement for residential and small commercial properties across the area.
 </p>
 
 <p>
-Blocked, leaking or damaged gutters are one of the most common causes of external property problems. When gutters fail, water can overflow onto walls, foundations and rooflines. Over time, this can lead to staining, moss growth, damp penetration and even structural concerns.
+Gutters play a critical role in directing rainwater safely away from your property. When blocked, leaking or damaged, they can quickly lead to damp problems, water staining and long-term structural issues. Regular maintenance helps protect your home and avoid unnecessary repair costs.
 </p>
+
+<h2>Local Gutter Clearing in Kirk Sandall</h2>
 
 <p>
-We work across Kirk Sandall and surrounding areas of Doncaster, delivering reliable gutter clearing, cleaning, repairs and full replacement for houses, bungalows and small commercial buildings.
+Our gutter clearing service removes leaves, moss and debris that build up throughout the year. Properties in Kirk Sandall are particularly prone to blockages due to surrounding greenery and seasonal weather changes.
 </p>
 
-<h2>Instant Gutter Quote Calculator</h2>
-
-<form id="quoteForm">
-<label for="metres">Total gutter length (metres)</label>
-<input type="number" id="metres" min="1" step="0.1" required>
-
-<div class="form-row">
-<input type="checkbox" id="clearing">
-<label for="clearing">Gutter clearing</label>
-</div>
-
-<div class="form-row">
-<input type="checkbox" id="cleaning">
-<label for="cleaning">Gutter cleaning</label>
-</div>
-
-<div class="form-row">
-<input type="checkbox" id="replacement">
-<label for="replacement">Gutter replacement</label>
-</div>
-
-<button type="button" onclick="calculateQuote()" class="call-btn">Get Estimate</button>
-</form>
-
-<div id="quoteResult" style="margin-top:22px;font-size:18px;font-weight:bold;"></div>
-
-<script>
-function calculateQuote(){
-const m=parseFloat(document.getElementById('metres').value);
-if(!m||m<=0){alert("Please enter a valid length.");return;}
-let total=0;
-let items=[];
-if(clearing.checked){let p=m*5;total+=p;items.push(`Gutter clearing: £${p.toFixed(2)}`);}
-if(cleaning.checked){let p=m*5;total+=p;items.push(`Gutter cleaning: £${p.toFixed(2)}`);}
-if(replacement.checked){let p=m*21.5;total+=p;items.push(`Gutter replacement: £${p.toFixed(2)}`);}
-document.getElementById("quoteResult").innerHTML=
-items.length
-? `<ul>${items.map(i=>`<li>${i}</li>`).join("")}</ul><p><strong>Estimated total: £${total.toFixed(2)}</strong></p>`
-: "<p>Please select at least one service.</p>";
-}
-</script>
-
-<h2>Our Gutter Services in Kirk Sandall</h2>
-
-<h3>Gutter Clearing</h3>
-<p>
-Gutter clearing removes leaves, moss and debris that build up over time. Regular clearing helps prevent overflows and protects walls, fascias and foundations from water damage.
-</p>
-
-<a href="#clearing-lightbox">
+<a href="#img-clear">
 <img src="/images/clearing-service.webp" alt="Gutter clearing service in Kirk Sandall Doncaster" class="service-image">
 </a>
-<div id="clearing-lightbox" class="lightbox"><a href="#"><img src="/images/clearing-service.webp" alt=""></a></div>
+<div id="img-clear" class="lightbox"><a href="#"><img src="/images/clearing-service.webp" alt=""></a></div>
 
-<h3>Gutter Cleaning</h3>
+<h2>Gutter Cleaning Services</h2>
+
 <p>
-External gutter cleaning improves the appearance of your property by removing algae and staining. Clean gutters also dry more efficiently, helping extend their lifespan.
+External gutter cleaning improves both appearance and performance. Clean gutters dry more efficiently, helping to reduce algae growth and extend the lifespan of the system.
 </p>
 
-<a href="#cleaning-lightbox">
-<img src="/images/cleaned-gutters.webp" alt="Gutter cleaning in Kirk Sandall Doncaster" class="service-image">
+<a href="#img-clean">
+<img src="/images/cleaned-gutters.webp" alt="Cleaned gutters on a property in Kirk Sandall" class="service-image">
 </a>
-<div id="cleaning-lightbox" class="lightbox"><a href="#"><img src="/images/cleaned-gutters.webp" alt=""></a></div>
+<div id="img-clean" class="lightbox"><a href="#"><img src="/images/cleaned-gutters.webp" alt=""></a></div>
 
-<h3>Gutter Repairs & Replacement</h3>
+<h2>Gutter Repairs & Replacement</h2>
+
 <p>
-We repair leaking joints, loose sections and damaged guttering where possible. If replacement is required, we install durable systems designed for long-term reliability.
+Loose joints, leaks and sagging gutters can often be repaired if caught early. Where systems are beyond repair, we provide full gutter replacement using durable materials designed for long-term performance.
 </p>
 
-<a href="#replacement-lightbox">
-<img src="/images/replaced-gutter.webp" alt="Gutter replacement work in Kirk Sandall Doncaster" class="service-image">
+<a href="#img-replace">
+<img src="/images/replaced-gutter.webp" alt="New gutter installation in Kirk Sandall Doncaster" class="service-image">
 </a>
-<div id="replacement-lightbox" class="lightbox"><a href="#"><img src="/images/replaced-gutter.webp" alt=""></a></div>
+<div id="img-replace" class="lightbox"><a href="#"><img src="/images/replaced-gutter.webp" alt=""></a></div>
 
 <h2>Why Choose Home Repairs 4U</h2>
 
-<p>
-As a local Doncaster-based business, we understand the needs of properties in Kirk Sandall. We provide honest advice, clear pricing and dependable workmanship on every job.
-</p>
+<ul>
+<li>Local gutter services near Kirk Sandall</li>
+<li>Clear pricing and honest advice</li>
+<li>Safe access methods used</li>
+<li>Work completed with minimal disruption</li>
+</ul>
 
 <p>
-We also offer related services including
-<a href="/services/pressure-washing.html">pressure washing</a>,
-<a href="/services/upvc-restoration.html">uPVC restoration</a> and
-<a href="/services/fence-installation.html">fencing</a>, making us a convenient choice for external property maintenance.
-</p>
-
-<h2>Book Gutter Services Near You</h2>
-
-<p>
-If you’re searching for reliable gutter services near you in Kirk Sandall, Home Repairs 4U is ready to help. From routine maintenance to full gutter replacement, we provide solutions that protect your home and prevent costly damage.
+We also provide gutter services in nearby areas including
+<a href="/local/gutter-services-bentley.html">Bentley</a>,
+<a href="/local/gutter-services-askern.html">Askern</a> and
+<a href="/local/gutter-services-darrington.html">Darrington</a>.
 </p>
 
 <div style="text-align:center;margin:36px 0;">
@@ -243,12 +178,10 @@ If you’re searching for reliable gutter services near you in Kirk Sandall, Hom
 </main>
 
 <footer>
-© Home Repairs 4U | Gutter Services Kirk Sandall, Doncaster
-<br>
+© Home Repairs 4U | Gutter Services Kirk Sandall, Doncaster<br>
 <a href="/services/guttering.html">Guttering</a>
 <a href="/services/pressure-washing.html">Pressure Washing</a>
-<a href="/services/upvc-restoration.html">uPVC Restoration</a>
-<br>
+<a href="/services/fence-installation.html">Fencing</a><br>
 <a href="https://www.facebook.com/people/Handyman-services/61584395621256/">Facebook</a>
 </footer>
 
